# sqlite-parquet-vtable

./: .gitignore  .travis.yml  CentOS-7.dockerfile  Dockerfile  README.md  Ubuntu-16.04.dockerfile  Ubuntu-18.04.dockerfile  build-sqlite  make-linux  make-linux-pgo  meson.build  runner.py  travis-linux
tests/: create-queries-from-templates  create-query  meson.build  runner.py  test-all  test-bad-create-table  test-failmalloc  test-non-existent  test-queries  test-random  test-supported  test-unsupported
tests/datasets/codecs/: snappy.parquet
tests/datasets/no-nulls/: 99-rows_groupsize-1.parquet
tests/datasets/nulls/: 99-rows_groupsize-10.parquet
tests/datasets/unsupported/: null.parquet  uint8.parquet
tests/normal-use/binary-eq/: query.sql
tests/normal-use/binary-gt/: query.sql
tests/normal-use/binary-gte/: query.sql  results.txt
tests/normal-use/binary-lt/: query.sql
tests/normal-use/binary-lte/: query.sql
tests/normal-use/binary-rowid-and-ne/: query.sql
tests/normal-use/blob-is-not-1/: query.sql  results.txt
tests/normal-use/blob-is-not-2/: query.sql
tests/normal-use/bool-where-bool/: query.sql
tests/normal-use/bool-where-eq-0/: query.sql
tests/normal-use/bool-where-eq-1/: query.sql
tests/normal-use/bool-where-gt-0/: query.sql
tests/normal-use/bool-where-gt-1/: query.sql
tests/normal-use/bool-where-gte-0/: query.sql
tests/normal-use/bool-where-lt-0/: query.sql
tests/normal-use/bool-where-lt-1/: query.sql
tests/normal-use/bool-where-lte-1/: query.sql
tests/normal-use/bool-where-not-bool/: query.sql
tests/normal-use/cross-join-10-rowgroups/: query.sql
tests/normal-use/cross-join-count-1-rowgroup/: query.sql
tests/normal-use/double-eq/: query.sql
tests/normal-use/double-eq-int/: query.sql
tests/normal-use/double-eq-str/: query.sql
tests/normal-use/double-gt/: query.sql
tests/normal-use/double-gt-int/: query.sql
tests/normal-use/double-gt-str/: query.sql
tests/normal-use/double-gte/: query.sql  results.txt
tests/normal-use/double-gte-int/: query.sql
tests/normal-use/double-gte-str/: query.sql
tests/normal-use/double-is-not-99/: query.sql
tests/normal-use/double-is-not-null/: query.sql
tests/normal-use/double-lt/: query.sql  results.txt
tests/normal-use/double-lt-int/: query.sql
tests/normal-use/double-lt-str/: query.sql
tests/normal-use/double-lte/: query.sql
tests/normal-use/double-lte-int/: query.sql
tests/normal-use/double-lte-str/: query.sql
tests/normal-use/double-rowid-and-field-ne/: query.sql
tests/normal-use/double-rowid-and-field-ne-int/: query.sql
tests/normal-use/double-rowid-and-field-ne-str/: query.sql
tests/normal-use/double-rowid-and-field-ne2/: query.sql
tests/normal-use/double-rowid-and-field-ne2-some-int/: query.sql
tests/normal-use/double-rowid-and-field-ne2-some-str/: query.sql
tests/normal-use/fixed-bytearray-eq/: query.sql
tests/normal-use/fixed-bytearray-gt/: query.sql
tests/normal-use/fixed-bytearray-gte/: query.sql
tests/normal-use/fixed-bytearray-lt/: query.sql
tests/normal-use/fixed-bytearray-lte/: query.sql
tests/normal-use/fixed-bytearray-ne/: query.sql
tests/normal-use/float-eq/: query.sql
tests/normal-use/float-eq2/: query.sql
tests/normal-use/float-eq3/: query.sql
tests/normal-use/float-gt/: query.sql
tests/normal-use/float-gt-2/: query.sql
tests/normal-use/float-gte/: query.sql
tests/normal-use/float-is-not-null/: query.sql
tests/normal-use/float-is-null/: query.sql
tests/normal-use/float-lt-1/: query.sql
tests/normal-use/float-lt-2/: query.sql
tests/normal-use/float-lte/: query.sql
tests/normal-use/float-ne/: query.sql
tests/normal-use/float-skip/: query.sql
tests/normal-use/glob/: query.sql
tests/normal-use/glob-star-1/: query.sql  results.txt
tests/normal-use/glob-star-2/: query.sql
tests/normal-use/glob-star-eight/: query.sql
tests/normal-use/glob-star-stuff/: query.sql
tests/normal-use/glob-star-zero/: query.sql  results.txt
tests/queries/: 001-table-scan-1-rowgroup.sql  002-table-scan-10-rowgroups.sql  003-cross-join-count-1-rowgroup.sql  003-cross-join-count.sql  004-cross-join-10-rowgroups.sql  005-rowid-1-rowgroup.sql  006-rowid-10-rowgroups.sql  007-rowid-55-10-rowgroups.sql  008-nulls.sql  009-rowid-group-by.sql  010-order-by-string7.sql  011-order-by-string8.sql  012-string-7-is-null.sql  013-string-7-is-not-null.sql  014-nulls-like-percent-start.sql  015-nulls-like-no-match.sql  016-nulls-like-percent-end.sql  017-nulls-like-underscore.sql  018-string-gt-lt.sql  019-string-gte-lte.sql  020-string-eq.sql  021-rowid-and-field-eq.sql  022-rowid-and-field-ne.sql  023-int8-eq.sql  024-int8-lt.sql  025-int8-lte.sql  026-int8-gt.sql  027-int8-gte.sql  028-int8-rowid-eq-and-field-ne.sql  029-int64-gte.sql  030-int64-gt.sql  031-int64-eq.sql  032-int64-lt.sql  033-int64-lte.sql  034-int64-rowid-eq-and-field-ne.sql  035-int64-rowid-eq-and-field-ne2.sql  036-double-eq.sql  037-double-gt.sql  038-double-gte.sql  039-double-lt.sql  (+91 more)
tests/segfault-safety/: nonexistent-file.sql  unspecified-file.sql
tests/templates/: 001-table-scan-1-rowgroup.sql  003-cross-join-count-1-rowgroup.sql  005-rowid-1-rowgroup.sql  007-rowid-55-10-rowgroups.sql  009-rowid-group-by.sql  011-order-by-string8.sql  012-string-7-is-null.sql  013-string-7-is-not-null.sql  014-nulls-like-percent-start.sql  015-nulls-like-no-match.sql  017-nulls-like-underscore.sql  018-string-gt-lt.sql  019-string-gte-lte.sql  020-string-eq.sql  021-rowid-and-field-eq.sql  022-rowid-and-field-ne.sql  024-int8-lt.sql  026-int8-gt.sql  028-int8-rowid-eq-and-field-ne.sql  029-int64-gte.sql  030-int64-gt.sql  035-int64-rowid-eq-and-field-ne2.sql  039-double-lt.sql  042-double-rowid-and-field-ne2.sql  043-binary-eq.sql  044-binary-rowid-and-ne.sql  045-binary-lt.sql  046-binary-lte.sql  047-binary-gt.sql  048-binary-gte.sql  051-rowid-gte-none.sql  052-rowid-lt-none.sql  054-rowid-lte-one.sql  055-rowid-lt-one.sql  056-rowid-ne-some.sql  058-rowid-is-not-null.sql  060-rowid-double.sql  061-string-eq-int.sql  065-int8-eq-str2.sql  066-int8-eq-bogus-str.sql  (+64 more)
(+166 files in other folders)
