
# For more test args see https://mesonbuild.com/Unit-tests.html#other-test-options
runner = find_program('runner.py')

test('Load the extension', runner, args: files('NOTHING', 'NOTHING')+['0'])
test('Try loading a non-existent file', runner, args: files('./segfault-safety/nonexistent-file.sql', 'NOTHING')+['1'])
test('Try loading an unspecified file', runner, args: files('./segfault-safety/unspecified-file.sql', 'NOTHING')+['1'])
test('Try loading an unsupported file', runner, args: files('NOTHING', 'NOTHING')+['1','unsupported'])
test('Load all test files with nulls', runner, args: files('./segfault-safety/load-valid-file/query.sql', './segfault-safety/load-valid-file/results.nulls.txt')+['0','nulls'])
test('Load all test files without nulls', runner, args: files('./segfault-safety/load-valid-file/query.sql', './segfault-safety/load-valid-file/results.no-nulls.txt')+['0','no-nulls'])
test('Load all codec examples', runner, args: files('./segfault-safety/load-valid-file/query.sql', './segfault-safety/load-valid-file/results.codecs.txt')+['0','codecs'])

test('table-scan-1-rowgroup', runner, args:files('normal-use/table-scan-1-rowgroup/query.sql', 'normal-use/table-scan-1-rowgroup/results.txt')+['0','nulls'])
test('cross-join-count-1-rowgroup', runner, args:files('normal-use/cross-join-count-1-rowgroup/query.sql', 'normal-use/cross-join-count-1-rowgroup/results.txt')+['0','nulls'])
test('cross-join-10-rowgroups', runner, args:files('normal-use/cross-join-10-rowgroups/query.sql', 'normal-use/cross-join-10-rowgroups/results.txt')+['0','nulls'])
test('rowid-1-rowgroup', runner, args:files('normal-use/rowid-1-rowgroup/query.sql', 'normal-use/rowid-1-rowgroup/results.txt')+['0','nulls'])
test('rowid-55-10-rowgroups', runner, args:files('normal-use/rowid-55-10-rowgroups/query.sql', 'normal-use/rowid-55-10-rowgroups/results.txt')+['0','nulls'])
test('nulls', runner, args:files('normal-use/nulls/query.sql', 'normal-use/nulls/results.txt')+['0','nulls'])
test('rowid-group-by', runner, args:files('normal-use/rowid-group-by/query.sql', 'normal-use/rowid-group-by/results.txt')+['0','nulls'])
test('order-by-string7', runner, args:files('normal-use/order-by-string7/query.sql', 'normal-use/order-by-string7/results.txt')+['0','nulls'])
test('order-by-string8', runner, args:files('normal-use/order-by-string8/query.sql', 'normal-use/order-by-string8/results.txt')+['0','nulls'])
test('string-7-is-null', runner, args:files('normal-use/string-7-is-null/query.sql', 'normal-use/string-7-is-null/results.txt')+['0','nulls'])
test('string-7-is-not-null', runner, args:files('normal-use/string-7-is-not-null/query.sql', 'normal-use/string-7-is-not-null/results.txt')+['0','nulls'])
test('nulls-like-percent-start', runner, args:files('normal-use/nulls-like-percent-start/query.sql', 'normal-use/nulls-like-percent-start/results.txt')+['0','nulls'])
test('nulls-like-no-match', runner, args:files('normal-use/nulls-like-no-match/query.sql', 'normal-use/nulls-like-no-match/results.txt')+['0','nulls'])
test('nulls-like-percent-end', runner, args:files('normal-use/nulls-like-percent-end/query.sql', 'normal-use/nulls-like-percent-end/results.txt')+['0','nulls'])
test('nulls-like-underscore', runner, args:files('normal-use/nulls-like-underscore/query.sql', 'normal-use/nulls-like-underscore/results.txt')+['0','nulls'])
test('string-gt-lt', runner, args:files('normal-use/string-gt-lt/query.sql', 'normal-use/string-gt-lt/results.txt')+['0','nulls'])
test('string-gte-lte', runner, args:files('normal-use/string-gte-lte/query.sql', 'normal-use/string-gte-lte/results.txt')+['0','nulls'])
test('string-eq', runner, args:files('normal-use/string-eq/query.sql', 'normal-use/string-eq/results.txt')+['0','nulls'])
test('rowid-and-field-eq', runner, args:files('normal-use/rowid-and-field-eq/query.sql', 'normal-use/rowid-and-field-eq/results.txt')+['0','nulls'])
test('rowid-and-field-ne', runner, args:files('normal-use/rowid-and-field-ne/query.sql', 'normal-use/rowid-and-field-ne/results.txt')+['0','nulls'])
test('int8-eq', runner, args:files('normal-use/int8-eq/query.sql', 'normal-use/int8-eq/results.txt')+['0','nulls'])
test('int8-lt', runner, args:files('normal-use/int8-lt/query.sql', 'normal-use/int8-lt/results.txt')+['0','nulls'])
test('int8-lte', runner, args:files('normal-use/int8-lte/query.sql', 'normal-use/int8-lte/results.txt')+['0','nulls'])
test('int8-gt', runner, args:files('normal-use/int8-gt/query.sql', 'normal-use/int8-gt/results.txt')+['0','nulls'])
test('int8-gte', runner, args:files('normal-use/int8-gte/query.sql', 'normal-use/int8-gte/results.txt')+['0','nulls'])
test('int8-rowid-eq-and-field-ne', runner, args:files('normal-use/int8-rowid-eq-and-field-ne/query.sql', 'normal-use/int8-rowid-eq-and-field-ne/results.txt')+['0','nulls'])
test('int64-gte', runner, args:files('normal-use/int64-gte/query.sql', 'normal-use/int64-gte/results.txt')+['0','nulls'])
test('int64-gt', runner, args:files('normal-use/int64-gt/query.sql', 'normal-use/int64-gt/results.txt')+['0','nulls'])
test('int64-eq', runner, args:files('normal-use/int64-eq/query.sql', 'normal-use/int64-eq/results.txt')+['0','nulls'])
test('int64-lt', runner, args:files('normal-use/int64-lt/query.sql', 'normal-use/int64-lt/results.txt')+['0','nulls'])
test('int64-lte', runner, args:files('normal-use/int64-lte/query.sql', 'normal-use/int64-lte/results.txt')+['0','nulls'])
test('int64-rowid-eq-and-field-ne', runner, args:files('normal-use/int64-rowid-eq-and-field-ne/query.sql', 'normal-use/int64-rowid-eq-and-field-ne/results.txt')+['0','nulls'])
test('int64-rowid-eq-and-field-ne2', runner, args:files('normal-use/int64-rowid-eq-and-field-ne2/query.sql', 'normal-use/int64-rowid-eq-and-field-ne2/results.txt')+['0','nulls'])
test('double-eq', runner, args:files('normal-use/double-eq/query.sql', 'normal-use/double-eq/results.txt')+['0','nulls'])
test('double-gt', runner, args:files('normal-use/double-gt/query.sql', 'normal-use/double-gt/results.txt')+['0','nulls'])
test('double-gte', runner, args:files('normal-use/double-gte/query.sql', 'normal-use/double-gte/results.txt')+['0','nulls'])
test('double-lt', runner, args:files('normal-use/double-lt/query.sql', 'normal-use/double-lt/results.txt')+['0','nulls'])
test('double-lte', runner, args:files('normal-use/double-lte/query.sql', 'normal-use/double-lte/results.txt')+['0','nulls'])
test('double-rowid-and-field-ne', runner, args:files('normal-use/double-rowid-and-field-ne/query.sql', 'normal-use/double-rowid-and-field-ne/results.txt')+['0','nulls'])
test('double-rowid-and-field-ne2', runner, args:files('normal-use/double-rowid-and-field-ne2/query.sql', 'normal-use/double-rowid-and-field-ne2/results.txt')+['0','nulls'])
test('binary-eq', runner, args:files('normal-use/binary-eq/query.sql', 'normal-use/binary-eq/results.txt')+['0','nulls'])
test('binary-rowid-and-ne', runner, args:files('normal-use/binary-rowid-and-ne/query.sql', 'normal-use/binary-rowid-and-ne/results.txt')+['0','nulls'])
test('binary-lt', runner, args:files('normal-use/binary-lt/query.sql', 'normal-use/binary-lt/results.txt')+['0','nulls'])
test('binary-lte', runner, args:files('normal-use/binary-lte/query.sql', 'normal-use/binary-lte/results.txt')+['0','nulls'])
test('binary-gt', runner, args:files('normal-use/binary-gt/query.sql', 'normal-use/binary-gt/results.txt')+['0','nulls'])
test('binary-gte', runner, args:files('normal-use/binary-gte/query.sql', 'normal-use/binary-gte/results.txt')+['0','nulls'])
test('unusable-constraint', runner, args:files('normal-use/unusable-constraint/query.sql', 'normal-use/unusable-constraint/results.txt')+['0','nulls'])
test('rowid-gt-none', runner, args:files('normal-use/rowid-gt-none/query.sql', 'normal-use/rowid-gt-none/results.txt')+['0','nulls'])
test('rowid-gte-none', runner, args:files('normal-use/rowid-gte-none/query.sql', 'normal-use/rowid-gte-none/results.txt')+['0','nulls'])
test('rowid-lt-none', runner, args:files('normal-use/rowid-lt-none/query.sql', 'normal-use/rowid-lt-none/results.txt')+['0','nulls'])
test('rowid-lte-none', runner, args:files('normal-use/rowid-lte-none/query.sql', 'normal-use/rowid-lte-none/results.txt')+['0','nulls'])
test('rowid-lte-one', runner, args:files('normal-use/rowid-lte-one/query.sql', 'normal-use/rowid-lte-one/results.txt')+['0','nulls'])
test('rowid-lt-one', runner, args:files('normal-use/rowid-lt-one/query.sql', 'normal-use/rowid-lt-one/results.txt')+['0','nulls'])
test('rowid-ne-some', runner, args:files('normal-use/rowid-ne-some/query.sql', 'normal-use/rowid-ne-some/results.txt')+['0','nulls'])
test('nulls-from-no-null', runner, args:files('normal-use/nulls-from-no-null/query.sql', 'normal-use/nulls-from-no-null/results.txt')+['0','nulls'])
test('rowid-is-not-null', runner, args:files('normal-use/rowid-is-not-null/query.sql', 'normal-use/rowid-is-not-null/results.txt')+['0','nulls'])
test('rowid-eq-string', runner, args:files('normal-use/rowid-eq-string/query.sql', 'normal-use/rowid-eq-string/results.txt')+['0','nulls'])
test('rowid-double', runner, args:files('normal-use/rowid-double/query.sql', 'normal-use/rowid-double/results.txt')+['0','nulls'])
test('string-eq-int', runner, args:files('normal-use/string-eq-int/query.sql', 'normal-use/string-eq-int/results.txt')+['0','nulls'])
test('string-eq-double', runner, args:files('normal-use/string-eq-double/query.sql', 'normal-use/string-eq-double/results.txt')+['0','nulls'])
test('int8-eq-double', runner, args:files('normal-use/int8-eq-double/query.sql', 'normal-use/int8-eq-double/results.txt')+['0','nulls'])
test('int8-eq-str', runner, args:files('normal-use/int8-eq-str/query.sql', 'normal-use/int8-eq-str/results.txt')+['0','nulls'])
test('int8-eq-str2', runner, args:files('normal-use/int8-eq-str2/query.sql', 'normal-use/int8-eq-str2/results.txt')+['0','nulls'])
test('int8-eq-bogus-str', runner, args:files('normal-use/int8-eq-bogus-str/query.sql', 'normal-use/int8-eq-bogus-str/results.txt')+['0','nulls'])
test('int8-lt-str', runner, args:files('normal-use/int8-lt-str/query.sql', 'normal-use/int8-lt-str/results.txt')+['0','nulls'])
test('int8-lt-double', runner, args:files('normal-use/int8-lt-double/query.sql', 'normal-use/int8-lt-double/results.txt')+['0','nulls'])
test('int8-lte-str', runner, args:files('normal-use/int8-lte-str/query.sql', 'normal-use/int8-lte-str/results.txt')+['0','nulls'])
test('int8-lte-double', runner, args:files('normal-use/int8-lte-double/query.sql', 'normal-use/int8-lte-double/results.txt')+['0','nulls'])
test('int8-gt-str', runner, args:files('normal-use/int8-gt-str/query.sql', 'normal-use/int8-gt-str/results.txt')+['0','nulls'])
test('int8-gt-double', runner, args:files('normal-use/int8-gt-double/query.sql', 'normal-use/int8-gt-double/results.txt')+['0','nulls'])
test('int8-gte-str', runner, args:files('normal-use/int8-gte-str/query.sql', 'normal-use/int8-gte-str/results.txt')+['0','nulls'])
test('int8-gte-double', runner, args:files('normal-use/int8-gte-double/query.sql', 'normal-use/int8-gte-double/results.txt')+['0','nulls'])
test('int8-ne-str', runner, args:files('normal-use/int8-ne-str/query.sql', 'normal-use/int8-ne-str/results.txt')+['0','nulls'])
test('int8-ne-double', runner, args:files('normal-use/int8-ne-double/query.sql', 'normal-use/int8-ne-double/results.txt')+['0','nulls'])
test('int64-gte-str', runner, args:files('normal-use/int64-gte-str/query.sql', 'normal-use/int64-gte-str/results.txt')+['0','nulls'])
test('int64-gte-double', runner, args:files('normal-use/int64-gte-double/query.sql', 'normal-use/int64-gte-double/results.txt')+['0','nulls'])
test('int65-gt-str', runner, args:files('normal-use/int65-gt-str/query.sql', 'normal-use/int65-gt-str/results.txt')+['0','nulls'])
test('int65-gt-double', runner, args:files('normal-use/int65-gt-double/query.sql', 'normal-use/int65-gt-double/results.txt')+['0','nulls'])
test('int64-eq-str', runner, args:files('normal-use/int64-eq-str/query.sql', 'normal-use/int64-eq-str/results.txt')+['0','nulls'])
test('int64-eq-double', runner, args:files('normal-use/int64-eq-double/query.sql', 'normal-use/int64-eq-double/results.txt')+['0','nulls'])
test('int64-lt-str', runner, args:files('normal-use/int64-lt-str/query.sql', 'normal-use/int64-lt-str/results.txt')+['0','nulls'])
test('int64-lt-double', runner, args:files('normal-use/int64-lt-double/query.sql', 'normal-use/int64-lt-double/results.txt')+['0','nulls'])
test('int64-lte-str', runner, args:files('normal-use/int64-lte-str/query.sql', 'normal-use/int64-lte-str/results.txt')+['0','nulls'])
test('int64-lte-double', runner, args:files('normal-use/int64-lte-double/query.sql', 'normal-use/int64-lte-double/results.txt')+['0','nulls'])
test('int64-ne-str', runner, args:files('normal-use/int64-ne-str/query.sql', 'normal-use/int64-ne-str/results.txt')+['0','nulls'])
test('int64-ne-double', runner, args:files('normal-use/int64-ne-double/query.sql', 'normal-use/int64-ne-double/results.txt')+['0','nulls'])
test('int64-ne-some-str', runner, args:files('normal-use/int64-ne-some-str/query.sql', 'normal-use/int64-ne-some-str/results.txt')+['0','nulls'])
test('int64-ne-some-double', runner, args:files('normal-use/int64-ne-some-double/query.sql', 'normal-use/int64-ne-some-double/results.txt')+['0','nulls'])
test('double-eq-str', runner, args:files('normal-use/double-eq-str/query.sql', 'normal-use/double-eq-str/results.txt')+['0','nulls'])
test('double-eq-int', runner, args:files('normal-use/double-eq-int/query.sql', 'normal-use/double-eq-int/results.txt')+['0','nulls'])
test('double-gt-str', runner, args:files('normal-use/double-gt-str/query.sql', 'normal-use/double-gt-str/results.txt')+['0','nulls'])
test('double-gt-int', runner, args:files('normal-use/double-gt-int/query.sql', 'normal-use/double-gt-int/results.txt')+['0','nulls'])
test('double-gte-str', runner, args:files('normal-use/double-gte-str/query.sql', 'normal-use/double-gte-str/results.txt')+['0','nulls'])
test('double-gte-int', runner, args:files('normal-use/double-gte-int/query.sql', 'normal-use/double-gte-int/results.txt')+['0','nulls'])
test('double-lt-str', runner, args:files('normal-use/double-lt-str/query.sql', 'normal-use/double-lt-str/results.txt')+['0','nulls'])
test('double-lt-int', runner, args:files('normal-use/double-lt-int/query.sql', 'normal-use/double-lt-int/results.txt')+['0','nulls'])
test('double-lte-str', runner, args:files('normal-use/double-lte-str/query.sql', 'normal-use/double-lte-str/results.txt')+['0','nulls'])
test('double-lte-int', runner, args:files('normal-use/double-lte-int/query.sql', 'normal-use/double-lte-int/results.txt')+['0','nulls'])
test('double-rowid-and-field-ne-str', runner, args:files('normal-use/double-rowid-and-field-ne-str/query.sql', 'normal-use/double-rowid-and-field-ne-str/results.txt')+['0','nulls'])
test('double-rowid-and-field-ne-int', runner, args:files('normal-use/double-rowid-and-field-ne-int/query.sql', 'normal-use/double-rowid-and-field-ne-int/results.txt')+['0','nulls'])
test('double-rowid-and-field-ne2-some-str', runner, args:files('normal-use/double-rowid-and-field-ne2-some-str/query.sql', 'normal-use/double-rowid-and-field-ne2-some-str/results.txt')+['0','nulls'])
test('double-rowid-and-field-ne2-some-int', runner, args:files('normal-use/double-rowid-and-field-ne2-some-int/query.sql', 'normal-use/double-rowid-and-field-ne2-some-int/results.txt')+['0','nulls'])
test('rowid-gte-0', runner, args:files('normal-use/rowid-gte-0/query.sql', 'normal-use/rowid-gte-0/results.txt')+['0','nulls'])
test('rowid-gt-0', runner, args:files('normal-use/rowid-gt-0/query.sql', 'normal-use/rowid-gt-0/results.txt')+['0','nulls'])
test('bool-where-eq-0', runner, args:files('normal-use/bool-where-eq-0/query.sql', 'normal-use/bool-where-eq-0/results.txt')+['0','nulls'])
test('bool-where-eq-1', runner, args:files('normal-use/bool-where-eq-1/query.sql', 'normal-use/bool-where-eq-1/results.txt')+['0','nulls'])
test('bool-where-bool', runner, args:files('normal-use/bool-where-bool/query.sql', 'normal-use/bool-where-bool/results.txt')+['0','nulls'])
test('bool-where-not-bool', runner, args:files('normal-use/bool-where-not-bool/query.sql', 'normal-use/bool-where-not-bool/results.txt')+['0','nulls'])
test('bool-where-gt-0', runner, args:files('normal-use/bool-where-gt-0/query.sql', 'normal-use/bool-where-gt-0/results.txt')+['0','nulls'])
test('bool-where-gte-0', runner, args:files('normal-use/bool-where-gte-0/query.sql', 'normal-use/bool-where-gte-0/results.txt')+['0','nulls'])
test('bool-where-gt-1', runner, args:files('normal-use/bool-where-gt-1/query.sql', 'normal-use/bool-where-gt-1/results.txt')+['0','nulls'])
test('bool-where-lt-0', runner, args:files('normal-use/bool-where-lt-0/query.sql', 'normal-use/bool-where-lt-0/results.txt')+['0','nulls'])
test('bool-where-lt-1', runner, args:files('normal-use/bool-where-lt-1/query.sql', 'normal-use/bool-where-lt-1/results.txt')+['0','nulls'])
test('bool-where-lte-1', runner, args:files('normal-use/bool-where-lte-1/query.sql', 'normal-use/bool-where-lte-1/results.txt')+['0','nulls'])
test('ts-eq-july-20', runner, args:files('normal-use/ts-eq-july-20/query.sql', 'normal-use/ts-eq-july-20/results.txt')+['0','nulls'])
test('ts-lt-july-20', runner, args:files('normal-use/ts-lt-july-20/query.sql', 'normal-use/ts-lt-july-20/results.txt')+['0','nulls'])
test('ts-lte-july-20', runner, args:files('normal-use/ts-lte-july-20/query.sql', 'normal-use/ts-lte-july-20/results.txt')+['0','nulls'])
test('ts-gt-july-20', runner, args:files('normal-use/ts-gt-july-20/query.sql', 'normal-use/ts-gt-july-20/results.txt')+['0','nulls'])
test('ts-gte-july-20', runner, args:files('normal-use/ts-gte-july-20/query.sql', 'normal-use/ts-gte-july-20/results.txt')+['0','nulls'])
test('ts-ne-july-20', runner, args:files('normal-use/ts-ne-july-20/query.sql', 'normal-use/ts-ne-july-20/results.txt')+['0','nulls'])
test('fixed-bytearray-eq', runner, args:files('normal-use/fixed-bytearray-eq/query.sql', 'normal-use/fixed-bytearray-eq/results.txt')+['0','nulls'])
test('fixed-bytearray-lt', runner, args:files('normal-use/fixed-bytearray-lt/query.sql', 'normal-use/fixed-bytearray-lt/results.txt')+['0','nulls'])
test('fixed-bytearray-lte', runner, args:files('normal-use/fixed-bytearray-lte/query.sql', 'normal-use/fixed-bytearray-lte/results.txt')+['0','nulls'])
test('fixed-bytearray-gt', runner, args:files('normal-use/fixed-bytearray-gt/query.sql', 'normal-use/fixed-bytearray-gt/results.txt')+['0','nulls'])
test('fixed-bytearray-gte', runner, args:files('normal-use/fixed-bytearray-gte/query.sql', 'normal-use/fixed-bytearray-gte/results.txt')+['0','nulls'])
test('fixed-bytearray-ne', runner, args:files('normal-use/fixed-bytearray-ne/query.sql', 'normal-use/fixed-bytearray-ne/results.txt')+['0','nulls'])
test('var-bytearray-eq', runner, args:files('normal-use/var-bytearray-eq/query.sql', 'normal-use/var-bytearray-eq/results.txt')+['0','nulls'])
test('var-bytearray-lt', runner, args:files('normal-use/var-bytearray-lt/query.sql', 'normal-use/var-bytearray-lt/results.txt')+['0','nulls'])
test('var-bytearray-lte', runner, args:files('normal-use/var-bytearray-lte/query.sql', 'normal-use/var-bytearray-lte/results.txt')+['0','nulls'])
test('var-bytearray-gt', runner, args:files('normal-use/var-bytearray-gt/query.sql', 'normal-use/var-bytearray-gt/results.txt')+['0','nulls'])
test('var-bytearray-gte', runner, args:files('normal-use/var-bytearray-gte/query.sql', 'normal-use/var-bytearray-gte/results.txt')+['0','nulls'])
test('var-bytearray-ne', runner, args:files('normal-use/var-bytearray-ne/query.sql', 'normal-use/var-bytearray-ne/results.txt')+['0','nulls'])
test('string-lte', runner, args:files('normal-use/string-lte/query.sql', 'normal-use/string-lte/results.txt')+['0','nulls'])
test('random-testcase-1', runner, args:files('normal-use/random-testcase-1/query.sql', 'normal-use/random-testcase-1/results.txt')+['0','nulls'])
test('random-testcase-2', runner, args:files('normal-use/random-testcase-2/query.sql', 'normal-use/random-testcase-2/results.txt')+['0','nulls'])
test('random-testcase-3', runner, args:files('normal-use/random-testcase-3/query.sql', 'normal-use/random-testcase-3/results.txt')+['0','nulls'])
test('rowid-is-null', runner, args:files('normal-use/rowid-is-null/query.sql', 'normal-use/rowid-is-null/results.txt')+['0','nulls'])
test('float-eq', runner, args:files('normal-use/float-eq/query.sql', 'normal-use/float-eq/results.txt')+['0','nulls'])
test('float-eq2', runner, args:files('normal-use/float-eq2/query.sql', 'normal-use/float-eq2/results.txt')+['0','nulls'])
test('float-eq3', runner, args:files('normal-use/float-eq3/query.sql', 'normal-use/float-eq3/results.txt')+['0','nulls'])
test('float-ne', runner, args:files('normal-use/float-ne/query.sql', 'normal-use/float-ne/results.txt')+['0','nulls'])
test('float-is-null', runner, args:files('normal-use/float-is-null/query.sql', 'normal-use/float-is-null/results.txt')+['0','nulls'])
test('float-is-not-null', runner, args:files('normal-use/float-is-not-null/query.sql', 'normal-use/float-is-not-null/results.txt')+['0','nulls'])
test('float-gte', runner, args:files('normal-use/float-gte/query.sql', 'normal-use/float-gte/results.txt')+['0','nulls'])
test('float-gt', runner, args:files('normal-use/float-gt/query.sql', 'normal-use/float-gt/results.txt')+['0','nulls'])
test('float-gt-2', runner, args:files('normal-use/float-gt-2/query.sql', 'normal-use/float-gt-2/results.txt')+['0','nulls'])
test('float-lt-1', runner, args:files('normal-use/float-lt-1/query.sql', 'normal-use/float-lt-1/results.txt')+['0','nulls'])
test('float-lt-2', runner, args:files('normal-use/float-lt-2/query.sql', 'normal-use/float-lt-2/results.txt')+['0','nulls'])
test('float-lte', runner, args:files('normal-use/float-lte/query.sql', 'normal-use/float-lte/results.txt')+['0','nulls'])
test('float-skip', runner, args:files('normal-use/float-skip/query.sql', 'normal-use/float-skip/results.txt')+['0','nulls'])
test('glob', runner, args:files('normal-use/glob/query.sql', 'normal-use/glob/results.txt')+['0','nulls'])
test('glob-star-1', runner, args:files('normal-use/glob-star-1/query.sql', 'normal-use/glob-star-1/results.txt')+['0','nulls'])
test('glob-star-eight', runner, args:files('normal-use/glob-star-eight/query.sql', 'normal-use/glob-star-eight/results.txt')+['0','nulls'])
test('glob-star-zero', runner, args:files('normal-use/glob-star-zero/query.sql', 'normal-use/glob-star-zero/results.txt')+['0','nulls'])
test('glob-star-2', runner, args:files('normal-use/glob-star-2/query.sql', 'normal-use/glob-star-2/results.txt')+['0','nulls'])
test('glob-star-stuff', runner, args:files('normal-use/glob-star-stuff/query.sql', 'normal-use/glob-star-stuff/results.txt')+['0','nulls'])
test('like-long', runner, args:files('normal-use/like-long/query.sql', 'normal-use/like-long/results.txt')+['0','nulls'])
test('blob-is-not-1', runner, args:files('normal-use/blob-is-not-1/query.sql', 'normal-use/blob-is-not-1/results.txt')+['0','nulls'])
test('blob-is-not-2', runner, args:files('normal-use/blob-is-not-2/query.sql', 'normal-use/blob-is-not-2/results.txt')+['0','nulls'])
test('not-null', runner, args:files('normal-use/not-null/query.sql', 'normal-use/not-null/results.txt')+['0','nulls'])
test('not-not-null', runner, args:files('normal-use/not-not-null/query.sql', 'normal-use/not-not-null/results.txt')+['0','nulls'])
test('double-is-not-null', runner, args:files('normal-use/double-is-not-null/query.sql', 'normal-use/double-is-not-null/results.txt')+['0','nulls'])
test('double-is-not-99', runner, args:files('normal-use/double-is-not-99/query.sql', 'normal-use/double-is-not-99/results.txt')+['0','nulls'])
